Make sure the highlight icon appears on IE

--- a/src/main/resources/content/styles/shCoreDefault.css
+++ b/src/main/resources/content/styles/shCoreDefault.css
@@ -15,7 +15,6 @@
  * Dual licensed under the MIT and GPL licenses.
  */
 .syntaxhighlighter a,
-.syntaxhighlighter div,
 .syntaxhighlighter code,
 .syntaxhighlighter table,
 .syntaxhighlighter table td,
@@ -30,6 +29,34 @@
   border: 0 !important;
   bottom: auto !important;
   float: none !important;
+  height: auto !important;
+  left: auto !important;
+  line-height: 1.3em !important;
+  margin: 0 !important;
+  outline: 0 !important;
+  overflow: visible !important;
+  padding: 0 !important;
+  position: static !important;
+  right: auto !important;
+  text-align: left !important;
+  top: auto !important;
+  vertical-align: baseline !important;
+  width: auto !important;
+  box-sizing: content-box !important;
+  font-family: "Consolas", "Bitstream Vera Sans Mono", "Courier New", Courier, monospace !important;
+  font-weight: normal !important;
+  font-style: normal !important;
+  font-size: 1em !important;
+  min-height: inherit !important;
+
+}
+
+.syntaxhighlighter div {
+  -moz-border-radius: 0 0 0 0 !important;
+  -webkit-border-radius: 0 0 0 0 !important;
+  background: none !important;
+  border: 0 !important;
+  bottom: auto !important;
   height: auto !important;
   left: auto !important;
   line-height: 1.3em !important;
